# autonomous-research-dev-agent

./: README.md
backend/: .env.example  pyproject.toml  worker.py
backend/alembic/versions/: a3a2095dfa03_add_agent_and_params_to_tasks.py  a7a5d216d788_add_documents_table_with_pgvector.py
backend/app/: config.py  embeddings.py  jobs.py  main.py  models.py  queue.py  rag.py  storage.py
backend/app/agents/: claude.py  planner.py  research.py
backend/app/routes/: plan.py  research.py
backend/app/tools/: github.py  image.py  scrape.py  text_doc.py
frontend/src/lib/: api.ts
frontend/src/pages/: NewTaskPage.tsx  TaskDetailPage.tsx
infra/: docker-compose.yml
