[project]
name = "arda-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.102.0",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "rq>=2.10.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.47.0",
]
